--- a/src/components/Choose-us/choose-us.css
+++ b/src/components/Choose-us/choose-us.css
@@ -24,7 +24,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: #fff;
+  background: rgba(255, 255, 255, 0.012);
   z-index: 7777;
   width: 50px;
   height: 50px;
@@ -36,7 +36,7 @@
 }
 
 .play__icon i {
-  color: #17bf9e;
+  color: #4e98f3;
   font-size: 2rem;
   padding: 10px;
 }
