--- a/src/components/Courses-section/courses.css
+++ b/src/components/Courses-section/courses.css
@@ -3,7 +3,7 @@
 }
 
 .course__img img {
-  border-radius: 10px;
+  border-radius: 20px;
   margin-bottom: 20px;
 }
 
@@ -11,7 +11,7 @@
   text-decoration: none;
   font-weight: 600;
   font-size: 0.9rem;
-  color: #17bf9e;
+  color: #3794f7;
 }
 
 .lesson,
