--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 80px;
   line-height: 80px;
+  background-color: rgb(249, 249, 249);
 }
 
 .nav__list {
@@ -21,12 +22,12 @@
 }
 
 .nav__item a:hover {
-  color: #17bf9e;
+  color: #0857E0;
 }
 
 .nav__right p {
   font-weight: 500;
-  color: #0a2b1e;
+  color: #0857E0;
   font-size: 1.1rem;
 }
 
@@ -36,7 +37,7 @@
 
 .mobile__menu span i {
   font-size: 1.4rem;
-  color: #0a2b1e;
+  color: #0857E0;
   cursor: pointer;
 }
 
@@ -51,7 +52,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #0a2b1ec2;
+ 
     z-index: 99;
     display: none;
   }
@@ -68,6 +69,7 @@
     align-items: center;
     z-index: 999;
     padding-top: 80px;
+   
   }
 
   .mobile__menu {
