--- a/src/components/profil/profil.css
+++ b/src/components/profil/profil.css
@@ -1,34 +1,27 @@
-.containerP {
-    display: flex;
-    height: 290px;
-    width: 100%;
-    box-shadow: 0px 0px 0px 0px  #eeeaea;
-    margin: auto;
-    margin-top: 0px;
-    background-image: linear-gradient(to right,rgb(65, 65, 247),rgb(118, 118, 252));
-  }
-  .containerliste {
-    display: flex;
-    height: 80px;
-    width: 100%;
-    box-shadow: 0px 0px 0px 0px  #eeeaea;
-    margin: auto;
-    margin-top: 0px;
-    background-color: rgb(250, 250, 250);
-}
- .containerliste a{
-    margin-top: 1%;
-    margin-left: 18%;
-    display: flex;
-    
-}
 
-.containerCOU {
+.containerP {
   display: flex;
-  height: 400px;
-  width: 100%;
-  box-shadow: 0px 0px 0px 0px  #eeeaea;
+  height: 650px;
+  width: 90%;
+  box-shadow: 2px 1px 3px 3px  #eeeaea;
   margin: auto;
-  margin-top: 0px;
-  background-color: rgb(250, 250, 250);
+  margin-top: 50px;
+
 }
+.containerPp {
+  display: flex;
+  height: 200px;
+  width: 80%;
+  box-shadow: 2px 1px 3px 3px  #eeeaea;
+  margin: auto;
+  margin-top: 50px;
+  background-image: linear-gradient(to rgb(60, 60, 196),rgb(130, 130, 247));
+}
+.sicon-account{
+  display: flex;
+  margin-right: 100px; 
+  }
+  .ri-account-circle-line{
+  color:rgba(88, 92, 95, 0.782);
+  font-size: 150px;
+  }
