--- a/src/components/Courses/onecoureuser.css
+++ b/src/components/Courses/onecoureuser.css
@@ -27,3 +27,11 @@
     font-size: 28px;
     margin-top: 40px;
       }
+      .btnC{
+        background: #4831f7;
+        color: #fff;
+        padding: 10px 30px;
+        border-radius: 50px;
+        margin-top: 50px;
+      }
+      
