--- a/src/components/Courses/onecoureuser.css
+++ b/src/components/Courses/onecoureuser.css
@@ -10,6 +10,18 @@
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     ;
   }
+  .CardCour5{
+    flex: 1;
+    margin: 0px 20px;
+    padding: 30px;
+    border-radius: 0px;
+    cursor: pointer;
+    width: 780px;
+    height: 600px;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    ;
+  }
   .CardCour4{
   
     flex: 1;
